file handling completed

--- a/6-file handling/6.2-filepath.ipynb
+++ b/6-file handling/6.2-filepath.ipynb
@@ -17,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory is e:\\UDemy Final\\python\\6-File Handling\n"
+      "Current working directory is d:\\krish naik\\data analyst bootcamp\\python\\6-file handling\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -91,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e:\\UDemy Final\\python\\6-File Handling\\folder\\file.txt\n"
+      "d:\\krish naik\\data analyst bootcamp\\python\\6-file handling\\folder\\file.txt\n"
      ]
     }
    ],
@@ -112,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The path 'example1.txt' does not exists\n"
+      "The path 'example1.txt' exists\n"
      ]
     }
    ],
@@ -159,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e:\\UDemy Final\\python\\6-File Handling\\example.txt\n"
+      "d:\\krish naik\\data analyst bootcamp\\python\\6-file handling\\example.txt\n"
      ]
     }
    ],
